# spot-me

./: Cargo.toml  README.md  Rocket.toml  Rusty.toml
src/: main.rs
src/api/: auth.rs  catalog.rs  food_logging.rs  mod.rs
src/config/: mod.rs
src/core/: mod.rs
src/core/auth/: mod.rs
src/core/oauth/: google_oauth.rs  mod.rs
src/core/response/: mod.rs
src/db/: catalog.rs  mod.rs  user.rs
src/model/: io.rs  mod.rs
